# job-tracker-cli

./: .gitignore  README.md  pyproject.toml
docs/: index.html  privacy.html
job_tracker/: auth.py  cli.py  config.py  scraper.py  shared.py  sheets.py  storage.py
